Added random line generator

--- a/css/main.css
+++ b/css/main.css
@@ -99,8 +99,11 @@ textarea {
    ========================================================================== */
 
 
-
-
+#canvas {
+    width: 100%;
+    /*height: 400px;*/
+    background: gray;
+}
 
 
 
